--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="#E1F5FE">
+    android:background="@drawable/bg">
 
     <ImageButton
         android:layout_width="wrap_content"
