--- a/app/src/main/res/layout/first_activity.xml
+++ b/app/src/main/res/layout/first_activity.xml
@@ -11,7 +11,8 @@
         style="@style/Widget.AppCompat.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:background="@color/cardview_dark_background"
+        android:text="Začať hru"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
