práca na druhom zadaní

--- a/app/src/main/res/layout/score.xml
+++ b/app/src/main/res/layout/score.xml
@@ -33,17 +33,17 @@
                 android:layout_marginStart="15dp"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="parent"
-                android:text="Score" />
+                android:text="@string/score" />
 
             <TextView
-                android:id="@+id/tv_time"
+                android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/imageView"
-                android:text="time" />
+                android:text="@string/date" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
