práca na druhom zadaní

--- a/app/src/main/res/layout/first_activity.xml
+++ b/app/src/main/res/layout/first_activity.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/bg">
 
     <Button
-        android:id="@+id/firstBtn"
+        android:id="@+id/playButton"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="130dp"
         android:layout_height="50dp"
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.683" />
 
     <Button
-        android:id="@+id/scoreBtn"
+        android:id="@+id/scoreButton"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="130dp"
         android:layout_height="50dp"
